Final UI + Test Submit + fixes